[package]
name = "wildland-storage-controller-client"
version = "0.2.7"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland storage controller client"
keywords = ["storage"]
publish = ["wl-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.97", features = ["derive"] }
serde_json = { version = "1.0.79" }
reqwest = { version = "0.11.10", features = ["json"] }
log = "0.4"
thiserror = "1.0.30"

wildland-crypto = { version = "0.4.0", path = "../wildland-crypto", registry = "wl-dev" }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
mockito = "0.31.0"
http = "0.2.6"

[package.metadata.workspaces]
independent = true
