[package]
name = "wildland-wallet"
version = "0.1.1"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland keystore library"
keywords = ["storage"]
publish = ["wl-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = "0.1.1"
hex = "0.4.3"
hex-literal = "0.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
xdg = "2.4.1"
wildland-crypto = { version = "0.4.4", path = "../wildland-crypto", registry = "wl-dev" }
thiserror = "1.0.31"

[package.metadata.workspaces]
independent = true
