[package]
name = "ffi-macro-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
ffi-parser = { version = "0.1.0", path = "../ffi-parser" }
cxx-build = { version = "1.0" }
swift-bridge-build = { version = "0.1" }
