[package]
name = "ffi-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1.0", features = ["full"] }
ffi-parser = { version = "0.1.0", path = "../ffi-parser" }
quote = "1.0"

