[package]
name = "ffi-macro"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ffi-parser = { version = "0.1.0", path = "../ffi-parser" }

[dev-dependencies]
swift-bridge = { version = "0.1" }

[package.metadata.workspaces]
independent = true
